poskusi za graf (1,0,2,1)

--- a/Poizkusi.ipynb
+++ b/Poizkusi.ipynb
@@ -545,8 +545,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.9",
-   "language": "sage",
+   "display_name": "SageMath 8.7",
+   "language": "",
    "name": "sagemath"
   },
   "language_info": {
