--- a/Poizkusi - Copy.ipynb
+++ b/Poizkusi - Copy.ipynb
@@ -397,8 +397,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.7",
-   "language": "",
+   "display_name": "SageMath 8.9",
+   "language": "sage",
    "name": "sagemath"
   },
   "language_info": {
