izbris stare funkcije

--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -775,18 +775,7 @@
     "    \n",
     "    nn = x * l + y * n \n",
     "    \n",
-    "    return nanotorus(0, ll, mm, nn)\n",
-    "\n",
-    "\n",
-    "## predlagana razlicica iz issueja ###\n",
-    "def izomorfni_graf2(k, l, m, n):\n",
-    "    ll = gcd(l, n)\n",
-    "    mm = abs(k * n - l * m) / ll\n",
-    "    \n",
-    "    x, y = EEA(l, n)\n",
-    "    kk = k * x + n * y\n",
-    "    \n",
-    "    return nanotorus(kk, ll, mm, 0)"
+    "    return nanotorus(0, ll, mm, nn)"
    ]
   },
   {
