--- a/Nanotori.ipynb
+++ b/Nanotori.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1784,8 +1784,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.9",
-   "language": "sage",
+   "display_name": "SageMath 8.7",
+   "language": "",
    "name": "sagemath"
   },
   "language_info": {
